--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ requests==2.28.1
 setuptools==57.0.0
 six==1.16.0
 tomli==2.0.1
-torch==1.13.1+cu117
+torch==1.13.1
 torchaudio==0.13.1+cu117
 torchvision==0.14.1
 typing-extensions==4.4.0
