--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -20,7 +20,7 @@ jobs:
           pip install black mypy pytest
       - name: Check PEP8 compliance
         run: |
-          black --check --verbose dags
+          black --check --verbose TransferBot
         continue-on-error: true
       - name: Lint with mypy
         run: |
@@ -29,10 +29,10 @@ jobs:
       - name: Unit tests with pytest
         run: |
           pytest --cov=src tests
-        continue-on-error: true
+        continue-on-error: false
       - name: Integration tests with pytest
         run: |
           pytest ./ # --cov=service service
-        continue-on-error: true
+        continue-on-error: false
 
 # TODO: delete continue-on-error
