--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -28,11 +28,6 @@ jobs:
         continue-on-error: true
       - name: Unit tests with pytest
         run: |
-          pytest --cov=src tests
+          pytest ./tests
         continue-on-error: false
-      - name: Integration tests with pytest
-        run: |
-          pytest ./ # --cov=service service
-        continue-on-error: false
-
 # TODO: delete continue-on-error
