--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -18,6 +18,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install black mypy pytest
+          pip install -e .
       - name: Check PEP8 compliance
         run: |
           black --check --verbose TransferBot
