--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -25,7 +25,7 @@ jobs:
         continue-on-error: true
       - name: Lint with mypy
         run: |
-          mypy dags
+          mypy TransferBot
         continue-on-error: true
       - name: Unit tests with pytest
         run: |
