--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,8 +33,6 @@ pillow = "9.4.0"
 pip = "21.1.2"
 pluggy = "1.0.0"
 pyparsing = "3.0.9"
-pytest-asyncio = "0.20.3"
-pytest = "7.2.1"
 python-dateutil = "2.8.2"
 pytz = "2022.7"
 requests = "2.28.1"
@@ -49,6 +47,12 @@ urllib3 = "1.26.13"
 wheel = "0.36.2"
 yarl = "1.8.2"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest-asyncio = "0.20.3"
+pytest = "7.2.1"
+black = "^24.1.1"
+flake8 = "^7.0.0"
 
 [build-system]
 requires = ["poetry-core"]
