--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,21 @@ pytest-asyncio = "0.20.3"
 pytest = "7.2.1"
 black = "^24.1.1"
 flake8 = "^7.0.0"
+ruff = "^0.2.1"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+line-length = 120
+extend-select = [
+  "E",
+  "E501",
+  "UP",  # pyupgrade
+  "D",   # pydocstyle
+  "I",   # isort
+]
+extend-include = ["*.ipynb"]
+extend-exclude = ["tests"]
+force-exclude = true
