--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,9 +50,9 @@ yarl = "1.8.2"
 [tool.poetry.group.dev.dependencies]
 pytest-asyncio = "0.20.3"
 pytest = "7.2.1"
-black = "^24.1.1"
 flake8 = "^7.0.0"
 ruff = "^0.2.1"
+pre-commit = "^3.6.1"
 
 [build-system]
 requires = ["poetry-core"]
