--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -3,29 +3,52 @@ name: Python tests
 on: push
 
 jobs:
-  test:
+  lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - name: Install Python
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.8'
-      - name: Install dependencies
+          python-version: '3.10'
+      - name: Install poetry
+        uses: abatilo/actions-poetry@v2
+      - name: Setup env
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install black mypy pytest
-      - name: Check PEP8 compliance
+          poetry config virtualenvs.create true --local
+          poetry config virtualenvs.in-project true --local
+      - uses: actions/cache@v3
+        name: Cache env
+        with:
+          path: ./.venv
+          key: venv-${{ hashFiles('poetry.lock') }}
+      - name: Install the project dependencies
+        run: poetry install --without test
+      - name: Check with ruff
+        run: poetry run ruff --output-format=github --config ./pyproject.toml .
+  tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - name: Install poetry
+        uses: abatilo/actions-poetry@v2
+      - name: Setup env
         run: |
-          black --check --verbose TransferBot
-        continue-on-error: true # TODO: change to false
-      - name: Lint with mypy
-        run: |
-          mypy TransferBot
-        continue-on-error: true # TODO: change to false
-      - name: Install package
-        run: pip install -e .
-      - name: Unit tests with pytest
-        run: |
-          pytest ./tests
+          poetry config virtualenvs.create true --local
+          poetry config virtualenvs.in-project true --local
+      - uses: actions/cache@v3
+        name: Cache env
+        with:
+          path: ./.venv
+          key: venv-${{ hashFiles('poetry.lock') }}
+      - name: Install the project dependencies
+        run: poetry install --without dev
+      - name: Run tests
+        run: poetry run pytest -v tests/
+      - name: Test coverage
+        continue-on-error: true
+        run: poetry run pytest --cov=src --cov-fail-under=90 tests/
