--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -23,7 +23,7 @@ jobs:
           path: ./.venv
           key: venv-${{ hashFiles('poetry.lock') }}
       - name: Install the project dependencies
-        run: poetry install --without test
+        run: poetry install --only dev
       - name: Check with ruff
         run: poetry run ruff --output-format=github --config ./pyproject.toml .
   tests:
@@ -46,7 +46,7 @@ jobs:
           path: ./.venv
           key: venv-${{ hashFiles('poetry.lock') }}
       - name: Install the project dependencies
-        run: poetry install --without dev
+        run: poetry install --only dev
       - name: Run tests
         run: poetry run pytest -v tests/
       - name: Test coverage
