--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -46,7 +46,7 @@ jobs:
           path: ./.venv
           key: venv-${{ hashFiles('poetry.lock') }}
       - name: Install the project dependencies
-        run: poetry install --only dev
+        run: poetry install
       - name: Run tests
         run: poetry run pytest -v tests/
       - name: Test coverage
