--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -49,6 +49,12 @@ jobs:
         run: poetry install
       - name: Run tests
         run: poetry run pytest -v tests/
-      - name: Test coverage
-        continue-on-error: true
-        run: poetry run pytest --cov=src --cov-fail-under=90 tests/
+      - name: Test coverage (Total)
+        run: poetry run pytest --cov=transferbot --cov-fail-under=90 tests/
+      - name: Test coverage (Handlers)
+        run: poetry run pytest --junitxml=pytest.xml --cov=transferbot/bot/ --cov-fail-under=90 tests/test_bot.py | tee pytest-coverage.txt
+      - name: Pytest coverage comment
+        uses: MishaKav/pytest-coverage-comment@main
+        with:
+          pytest-coverage-path: ./pytest-coverage.txt
+          junitxml-path: ./pytest.xml
