--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ wheel = "0.36.2"
 yarl = "1.8.2"
 trio = "^0.24.0"
 anyio = "^4.2.0"
+pytest-cov = "^4.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
