added ignore in flake8

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -24,8 +24,8 @@ jobs:
           key: venv-${{ hashFiles('poetry.lock') }}
       - name: Install the project dependencies
         run: poetry install --only dev
-      - name: Checkk with flake8
-        run: poetry run flake8 --max-line-length=121 transferbot/
+      - name: Check with flake8
+        run: poetry run flake8 --max-line-length=121 --ignore=W605,F401 transferbot/
       - name: Check with ruff
         run: poetry run ruff --output-format=github --config ./pyproject.toml .
   tests:
