--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -50,6 +50,6 @@ jobs:
       - name: Install the project dependencies
         run: poetry install
       - name: Test coverage (Total)
-        run: poetry run pytest -v --cov=transferbot tests/test_bot.py
+        run: poetry run pytest -v --cov-report term --cov=transferbot tests/test_bot.py
       - name: Test coverage (Handlers)
-        run: poetry run pytest -v --junitxml=pytest.xml --cov=transferbot/bot/ --cov-fail-under=90 tests/test_bot.py | tee pytest-coverage.txt
+        run: poetry run pytest -v --cov-report term --cov=transferbot/bot/ --cov-fail-under=90 tests/test_bot.py
